force-app/main/default/objects/Registration__c/fields/Fulfilling_Account__c.field-meta.xml
<CustomField>
    <fullName>Fulfilling_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The LMS Account used to fulfill this request. It should be the same account as the Canvas enrollments.</description>
    <inlineHelpText>The LMS Account used to fulfill this request. It should be the same account as the Canvas enrollments.</inlineHelpText>
    <label>Fulfilling Account</label>
    <referenceTo>lms_hed__LMS_Account__c</referenceTo>
    <relationshipLabel>Fulfilled Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>