force-app/main/default/objects/Registration__c/fields/Is_Ready_to_PE_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_to_PE_Confirm__c</fullName>
    <description>True if every line item on a registration has a canvas enrollment.</description>
    <formula>Line_Item_Count__c == Line_Item_Canvas_Enroll_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if every line item on a registration has a canvas enrollment.</inlineHelpText>
    <label>Is Ready to PE Confirm</label>
    <type>Checkbox</type>
</CustomField>