force-app/main/default/objects/Registration__c/fields/Is_Ready_to_PE_Notify__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_to_PE_Notify__c</fullName>
    <description>True if there is at least 1 pending line item.</description>
    <formula>Line_Item_Available_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if there is at least 1 pending line item.</inlineHelpText>
    <label>Is Ready to PE Notify</label>
    <type>Checkbox</type>
</CustomField>