force-app/main/default/objects/Registration__c/fields/Line_Item_Canvas_Enroll_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Canvas_Enroll_Count__c</fullName>
    <description># of line items that have an associated Canvas enrollment.</description>
    <inlineHelpText># of line items that have an associated Canvas enrollment.</inlineHelpText>
    <label>Line Item Canvas Enroll Count</label>
    <summaryFilterItems>
        <field>Registration_Line_Item__c.Canvas_Enrollment__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Line_Item__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>