force-app/main/default/objects/Registration__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <description>Count of Line Items.</description>
    <inlineHelpText>Count of Line Items.</inlineHelpText>
    <label>Line Item Count</label>
    <summaryForeignKey>Registration_Line_Item__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>