force-app/main/default/objects/Registration__c/fields/PE_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>PE_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Marketing Cloud has sent the confirmation email for this registration.</description>
    <inlineHelpText>True if Marketing Cloud has sent the confirmation email for this registration.</inlineHelpText>
    <label>PE Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>