force-app/main/default/objects/Registration__c/fields/PE_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>PE_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Marketing Cloud has sent an email to the student.</description>
    <inlineHelpText>True if Marketing Cloud has sent an email to the student.</inlineHelpText>
    <label>PE Notification Sent</label>
    <type>Checkbox</type>
</CustomField>