force-app/main/default/objects/Registration__c/fields/Registration_Method__c.field-meta.xml
<CustomField>
    <fullName>Registration_Method__c</fullName>
    <description>Chosen method at registration.</description>
    <inlineHelpText>Chosen method at registration.</inlineHelpText>
    <label>Registration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online - Credit Card</fullName>
            </value>
            <value>
                <fullName>Online - Sponsor</fullName>
            </value>
            <value>
                <fullName>Online - Check</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other/Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>