force-app/main/default/objects/Registration__c/recordTypes/PE_Registration.recordType-meta.xml
<RecordType>
    <fullName>PE_Registration</fullName>
    <active>true</active>
    <description>PE Registration</description>
    <label>PE Registration</label>
</RecordType>